Bug 2045035 - Fix sports widget match row overlap in medium size. r=maxx
Differential Revision: https://phabricator.services.mozilla.com/D304780

UltraBlame original commit: 97aff99358617f23eaf9e53d3756e3157d7e350f

--- a/browser/extensions/newtab/content-src/components/Widgets/SportsWidget/_SportsMatchRow.scss
+++ b/browser/extensions/newtab/content-src/components/Widgets/SportsWidget/_SportsMatchRow.scss
@@ -154,6 +154,8 @@
   }
 
   &.sports-match-row-medium {
+    padding: var(--space-xsmall);
+
     .sports-match-upcoming {
       .sports-match-time {
         font-size: var(--font-size-root);
