--- a/browser/extensions/newtab/css/activity-stream.css
+++ b/browser/extensions/newtab/css/activity-stream.css
@@ -7408,6 +7408,9 @@ dialog:dir(rtl)::after {
   font-size: var(--font-size-small);
   column-gap: var(--space-xsmall);
 }
+.sports-match-row.sports-match-row-medium {
+  padding: var(--space-xsmall);
+}
 .sports-match-row.sports-match-row-medium .sports-match-upcoming .sports-match-time {
   font-size: var(--font-size-root);
 }
