--- a/browser/extensions/newtab/css/nova/activity-stream.css
+++ b/browser/extensions/newtab/css/nova/activity-stream.css
@@ -7066,6 +7066,9 @@ button.arrow-button:dir(rtl) {
   font-size: var(--font-size-small);
   column-gap: var(--space-xsmall);
 }
+.sports-match-row.sports-match-row-medium {
+  padding: var(--space-xsmall);
+}
 .sports-match-row.sports-match-row-medium .sports-match-upcoming .sports-match-time {
   font-size: var(--font-size-root);
 }
